[gd_scene load_steps=20 format=3 uid="uid://dattkrnugucf7"]

[ext_resource type="Script" path="res://Systems/Level.gd" id="1_8uqlf"]
[ext_resource type="Script" path="res://Systems/Menus/PauseMenu.gd" id="4_krwjo"]
[ext_resource type="AudioStream" uid="uid://cwdf2xc88bg6l" path="res://Assets/Music/C Major Melody.ogg" id="5_7pq6n"]
[ext_resource type="Script" path="res://Systems/Menus/GameoverMenu.gd" id="6_dbt7s"]
[ext_resource type="PackedScene" uid="uid://2c8f2tboqb1x" path="res://Scenes/Menus/settings_panel.tscn" id="6_emfpe"]
[ext_resource type="Texture2D" uid="uid://ohbw1a0ersxn" path="res://Assets/Backgrounds/blackBackground.png" id="6_nbo4y"]
[ext_resource type="Texture2D" uid="uid://cs53e3u27tg34" path="res://icon.svg" id="7_nnv4u"]
[ext_resource type="PackedScene" uid="uid://cy36aygvs66pn" path="res://Scenes/Instances/Player.tscn" id="7_xg7hj"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://Assets/joystick/virtual_joystick.tscn" id="8_jy8mx"]
[ext_resource type="PackedScene" uid="uid://brxmbb723hivd" path="res://Scenes/Instances/NPC.tscn" id="9_0b6m4"]
[ext_resource type="PackedScene" uid="uid://338dke48iib1" path="res://Systems/Components/dialogue_component.tscn" id="10_kkgyb"]
[ext_resource type="Resource" path="res://Dialogue/Timelines/beginning.dtl" id="11_afld8"]
[ext_resource type="AudioStream" uid="uid://g2meg00000jh" path="res://Assets/SFX/gameover.wav" id="13_j73vi"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1py8u"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_cy6be"]
sky_material = SubResource("ProceduralSkyMaterial_1py8u")

[sub_resource type="Environment" id="Environment_23ux8"]
background_mode = 2
sky = SubResource("Sky_cy6be")
tonemap_mode = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1vv06"]

[sub_resource type="Theme" id="Theme_s10nw"]
Label/font_sizes/font_size = 72

[sub_resource type="Theme" id="Theme_024vc"]
Button/font_sizes/font_size = 48

[node name="Game" type="Node3D"]

[node name="Level" type="Node3D" parent="."]
script = ExtResource("1_8uqlf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level"]
environment = SubResource("Environment_23ux8")
camera_attributes = SubResource("CameraAttributesPractical_1vv06")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Spawn" type="Node3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.81839, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Level"]
use_collision = true
size = Vector3(100, 1, 100)

[node name="CSGBox3D2" type="CSGBox3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.55487, 0)
use_collision = true
size = Vector3(3, 1, 25)

[node name="Player" parent="Level" instance=ExtResource("7_xg7hj")]
transform = Transform3D(0.999983, 0.00588201, 0, -0.00588201, 0.999983, 0, 0, 0, 1, 3.38421, 4.3783, 10.3934)

[node name="LevelMusic" type="AudioStreamPlayer" parent="Level/Player"]
stream = ExtResource("5_7pq6n")
autoplay = true
bus = &"Music"

[node name="NPC" parent="Level" instance=ExtResource("9_0b6m4")]
transform = Transform3D(-0.958864, 0, -0.283865, 0, 1, 0, 0.283865, 0, -0.958864, 6.91395, 0.5, 23.1659)

[node name="DialogueComponent2" parent="Level/NPC" instance=ExtResource("10_kkgyb")]
dialogue = ExtResource("11_afld8")

[node name="PauseMenu" type="CanvasLayer" parent="." node_paths=PackedStringArray("level")]
process_mode = 3
visible = false
script = ExtResource("4_krwjo")
level = NodePath("../Level")

[node name="Label" type="Label" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -548.0
offset_right = 116.0
offset_bottom = -449.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_s10nw")
text = "Paused"

[node name="SettingsPanel" parent="PauseMenu" instance=ExtResource("6_emfpe")]

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
offset_left = 1401.0
offset_top = 507.0
offset_right = 1487.0
offset_bottom = 588.0
icon = ExtResource("7_nnv4u")
icon_alignment = 1
expand_icon = true

[node name="UnstuckButton" type="Button" parent="PauseMenu"]
offset_left = 1550.0
offset_top = 315.0
offset_right = 1636.0
offset_bottom = 396.0
icon = ExtResource("7_nnv4u")
icon_alignment = 1
expand_icon = true

[node name="GameoverMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("6_dbt7s")

[node name="Sprite2D" type="Sprite2D" parent="GameoverMenu"]
position = Vector2(968, 560)
scale = Vector2(1.02188, 1.05556)
texture = ExtResource("6_nbo4y")

[node name="Label" type="Label" parent="GameoverMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -257.0
offset_right = 170.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_s10nw")
text = "Gameover"

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -116.5
offset_right = 133.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="Button" parent="GameoverMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_024vc")
text = "Restart"

[node name="MainMenu" type="Button" parent="GameoverMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_024vc")
text = "Main Menu"

[node name="QuitGame" type="Button" parent="GameoverMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_024vc")
text = "Quit Game"

[node name="MobileControls" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Jump" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(1668, 824)
scale = Vector2(1.42187, 1.39344)
texture_normal = ExtResource("7_nnv4u")
action = "Jump"

[node name="Dash" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(1452, 823)
scale = Vector2(1.42187, 1.39344)
texture_normal = ExtResource("7_nnv4u")
action = "Dash"

[node name="Pause" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(1712, 26)
scale = Vector2(1.42187, 1.39344)
texture_normal = ExtResource("7_nnv4u")
action = "PauseMenu"

[node name="Virtual Joystick" parent="MobileControls" instance=ExtResource("8_jy8mx")]
action_left = "MoveLeft"
action_right = "MoveRight"
action_up = "MoveForward"
action_down = "MoveBackward"

[node name="GameoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_j73vi")
volume_db = -20.0
bus = &"Sound FX"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Level/Spawn")
spawn_limit = 4

[connection signal="pressed" from="PauseMenu/MainMenuButton" to="PauseMenu" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/UnstuckButton" to="PauseMenu" method="_on_unstuck_button_pressed"]
[connection signal="pressed" from="GameoverMenu/VBoxContainer/Restart" to="GameoverMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="GameoverMenu/VBoxContainer/MainMenu" to="GameoverMenu" method="_on_main_menu_pressed"]
[connection signal="pressed" from="GameoverMenu/VBoxContainer/QuitGame" to="GameoverMenu" method="_on_quit_game_pressed"]
